add page break to .single_all_courses

--- a/style.css
+++ b/style.css
@@ -1487,6 +1487,7 @@ img {width: 100%; height:auto;}
 
 .single_all_courses {
     margin-bottom: 150px;
+    page-break-inside: avoid;
 }
 .single_all_courses a.inscription_button {
 display: none;
