--- a/style.css
+++ b/style.css
@@ -2875,6 +2875,10 @@ img {
     margin-top: 30px;
   }
 
+  .all_course_title {
+    margin-top: 30px;
+  }
+
   #bg {
     outline: 0px !important;
   }
