--- a/style.css
+++ b/style.css
@@ -2872,11 +2872,11 @@ img {
   }
 
   .single_all_courses h3 {
-    margin-top: 30px;
+    padding-top: 20px;
   }
 
   .all_course_title {
-    margin-top: 30px;
+    padding-top: 20px;
   }
 
   #bg {
