--- a/style.css
+++ b/style.css
@@ -2863,6 +2863,16 @@ img {
     height: 0;
   }
 
+  header {
+    margin-bottom: 0;
+    padding-bottom: 0;
+  }
+
+  header h1 {
+    padding-bottom: 20px;
+    margin-bottom: 0;
+  }
+
   .single_all_courses {
     /* CAN BREAK AFTER COURSE */
     /* page-break-after: always; */
