--- a/style.css
+++ b/style.css
@@ -691,10 +691,12 @@ a#page_title {
 
 #big_first {
   color: rgba(0, 0, 0, 0.9);
-  font-size: 3em;
+  opacity: 0.1;
+  font-size: 30em;
 }
 #big_last {
   color: rgba(255, 255, 255, 0.9);
+  opacity: 0.1;
   font-size: 30em;
 }
 
