--- a/style.css
+++ b/style.css
@@ -694,13 +694,13 @@ a#page_title {
   color: rgba(0, 0, 0, 0.9);
   opacity: 0.1;
   position: relative;
-  right: 50px;
+  left: 50px;
 }
 #big_last {
   color: rgba(255, 255, 255, 0.9);
   opacity: 0.1;
   position: relative;
-  right: -50px;
+  left: -50px;
 }
 
 @media (min-width: 768px) {
