--- a/style.css
+++ b/style.css
@@ -1613,7 +1613,7 @@ section {
 }
 
 .sc_lo_cg.front {
-  background-image: url("img/conservatoire-geneve.png");
+  background-image: url("img/cmg.svg");
 }
 
 .sc_lo_cp.front {
